Fix close-overlay-btn top offset on small screens

--- a/client/src/components/general/Overlay.css
+++ b/client/src/components/general/Overlay.css
@@ -65,6 +65,6 @@
   }
 
   .overlay .close-overlay-btn {
-    top: 75px;
+    top: 55px;
   }
 }
